Resolving all remaining security vulnerabilities

--- a/package.json
+++ b/package.json
@@ -4,17 +4,21 @@
   "private": true,
   "dependencies": {
     "classnames": "^2.2.5",
+    "cryptiles": "^4.1.2",
     "firebase": "^4.5.0",
     "hoek": "^5.0.4",
     "konva": "^1.7.6",
+    "lodash": "^4.17.11",
+    "macaddress": "^0.2.9",
+    "mime": "^2.3.1",
     "prop-types": "^15.6.0",
-    "react": "^16.2.0",
+    "react": "^16.5.2",
     "react-absolute-grid": "^3.0.0",
     "react-addons-css-transition-group": "^15.6.2",
     "react-alert": "^2.4.0",
     "react-bootstrap": "^0.31.3",
     "react-custom-scrollbars": "^4.1.2",
-    "react-dom": "^16.0.0",
+    "react-dom": "^16.5.2",
     "react-infinite": "^0.12.1",
     "react-infinite-calendar": "^2.3.1",
     "react-konva": "^1.6.4",
@@ -24,7 +28,9 @@
     "react-shapes": "^0.1.0",
     "react-stars": "^2.2.5",
     "react-transition-group": "^2.2.1",
-    "underscore": "^1.8.3"
+    "sshpk": "^1.14.2",
+    "underscore": "^1.8.3",
+    "url-parse": "^1.4.3"
   },
   "scripts": {
     "start": "react-scripts start",
